--- a/PlanspielWeb/Properties/launchSettings.json
+++ b/PlanspielWeb/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://roi.jgdev.de:5001"
+      "applicationUrl": "http://localhost:5001"
     }
   }
 }
