--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -6,9 +6,14 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Dapper.Contrib" Version="2.0.35" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.3" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Planspiel.Models\Planspiel.Models.csproj" />
   </ItemGroup>
 
 </Project>
