--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Planspiel.Models\Planspiel.Models.csproj" />
+    <ProjectReference Include="..\ShareCalculationSystem\ShareCalculationSystem.csproj" />
   </ItemGroup>
 
 </Project>
