--- a/PlanspielWeb/PlanspielWeb.csproj
+++ b/PlanspielWeb/PlanspielWeb.csproj
@@ -26,6 +26,10 @@
     <ProjectReference Include="..\Planspiel.Models\Planspiel.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 
 
 </Project>
